tests/ui/lazy-type-alias/implied-outlives-bounds-1.print.stderr
error: rustc_dump_inferred_outlives
  --> $DIR/implied-outlives-bounds-1.rs:13:1
   |
LL | struct Type<'a, K, V>(&'a mut Alias<K, V>);
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: K: 'a
   = note: V: 'a

error: aborting due to 1 previous error

